# highspeedcomputing

./: .gitignore  README.md  cputools.cpp  deviceQuery  runinteractiveGPU.sh  startup.sh  sullivan.jona.code-workspace
HW4/Q1/: makefile  out.out  q1.c  q1.x  sbatch.script
hw4/: README.md  runinteractive.sh
hw4/q1/: makefile  out.out  q1.c  q1.x  sbatch.script
hw4/q2/: 10nodes_100bins.out  12cores_12bins.out  1nodes_1bins.out  1nodes_20bins.out  1nodes_24bins_haswell.out  1nodes_56bins_cascade.out  2_100_sbatch.script  2_20_sbatch.script  2nodes_100bins.out  2nodes_10bins.out  2nodes_20bins.out  4_100_sbatch copy.script  4_20_sbatch.script  4nodes_100bins.out  4nodes_100bins_cascade.out  4nodes_100bins_contiguous.out  4nodes_112bins_cascade.out  4nodes_20bins.out  getinfo.sh  makefile  q2.cpp  sbatch.script  sinfo.txt
hw5/: README.md
hw5/CUDA-Programs/: Coalescing  Coalescing.cu  Matmul.cu  Pi.cu  SimpleHello.cu
hw5/q1/: Makefile  SimpleHello  SimpleHello.cu  bins  histogram  histogram.cu  histogramOMP  histogramOMP.c  makefile  omp.py  out.out  runHistogram.sh  runOMPHistogram.sh  sbatch.script  sbatch_gpu.script
hw5/q2/: Makefile  Matmul  lectureExample.cu  naiveStencil  naiveStencil.cu  out.out  stencil  stencil.cu
project/: CMakeLists.txt  Edges  Makefile  README.md  SimpleHello  SimpleHello.cu  conv  conv.cu  conv1d.cu  main  main.cu  naive  naive.cu  project.cu  runinteractiveGPU.sh  sep  sep.cu  startup.sh  test  test.cu  tiles  tiles.cu
project/include/: cputools.h
project/src/: CMakeLists.txt  cputools.cpp  main.cpp
(+14 files in other folders)
